# sqlformat-py

./: .editorconfig  Cargo.toml  LICENSE  Makefile  README.md  build_wheels.sh  pyproject.toml  requirements-dev.txt  setup.py  sqlformat.pyi
.cargo/: config
.github/workflows/: build_wheels.yml
src/: lib.rs
